--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(to bottom, #0052AC, #1886BB);
+  background: linear-gradient(to bottom, #6366f1, #8b5cf6);
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(to bottom, #003D80, #12668A);
+  background: linear-gradient(to bottom, #585af0, #7840fa);
 }
+
+
